test/cases/compile_errors/bad_void_initializer.zig
comptime {
    _ = void{};
}

// error
//
// :2:13: error: type 'void' does not support array initialization syntax
